# physics767_cpp

./: .gitignore  CMakeLists.txt  main.cpp  script.md
mc_ising/: CMakeLists.txt  main.cpp
mul/: mul.hpp
